# pennylane-maestro

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  tests.yml
examples/: benchmark_ising_mps.py  benchmark_lightning_vs_maestro.py  ising_phase_transition.py  ising_vqe_pipeline_demo.py
pennylane_maestro/: __init__.py  config.toml  converter.py  maestro_device.py
tests/: conftest.py  test_advanced.py  test_converter.py  test_device.py  test_integration.py  test_mcm.py  test_measurements.py  test_simulator_config.py
